--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node --watch backend/server.js",
+    "server": "node backend/server.js",
     "client": "npm run dev --prefix frontend",
     "dev": "concurrently \"npm run start\" \"npm run client\"",
     "data:import": "node backend/seeder.js",
-    "data:destroy": "node backend/seeder.js -d"
+    "data:destroyinstall &&npm install --prefix frontend&& npm run build --prefix frontend": "node backend/seeder.js -d",
+    "build": "npm install &&npm install --prefix frontend&& npm run build --prefix frontend"
   },
   "author": "Mika Kaakinen",
   "license": "MIT",
